--- a/Week 3 DDP Proj.rmd
+++ b/Week 3 DDP Proj.rmd
@@ -1,5 +1,10 @@
 ---
 title: "Education and Wage"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "June Kieu"
 date: "9/14/2019"
 output: 
